<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/bg_dark_blue_button"
            android:padding="10dp"
            android:src="@drawable/ic_cross" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextBottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/filter_options" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/bg_optionally_button"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/brand" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChoiceBrand"
        style="@style/TextBottomSheet"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_filter_attributes"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:text="@string/samsung" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextBottomSheet"
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChoicePrice"
        style="@style/TextBottomSheet"
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_filter_attributes"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:paddingHorizontal="15dp"

        android:text="@string/_300_500" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextBottomSheet"
        android:layout_width="match_parent"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        android:text="@string/size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChoiceSize"
        style="@style/TextBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_filter_attributes"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:text="@string/_4_5_to_5_5_inches" />

</LinearLayout>