<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardCornerRadius="13dp">

    <ImageView
        android:id="@+id/imCardBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIconNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_circle_optionally"
            android:gravity="center"
            android:text="@string/new_item"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:fontFamily="@font/sf_pro_display_bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/iphone_12"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal"
            app:fontFamily="@font/sf_pro_display_bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/super_mega_rapido"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:fontFamily="@font/sf_pro_display_regular" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/buy_now"
            android:textAllCaps="false"
            android:textColor="@color/base_text"
            android:textSize="12sp"
            android:theme="@style/TextHintColor" />
    </LinearLayout>

</androidx.cardview.widget.CardView>