<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="230dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white">

    <ImageView
        android:id="@+id/imCardBackground"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/img_1" />

    <ImageView
        android:id="@+id/imFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="6dp"
        android:background="@drawable/bg_circle_white"
        android:scaleType="center"
        android:src="@drawable/ic_like_inactive" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPriceDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_047"
                android:textColor="@color/base_text"
                android:textSize="16sp"
                app:fontFamily="@font/mark_pro" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPriceWithoutDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_stroke_text"
                android:text="@string/_1_500"
                android:textColor="@color/grey_text"
                android:textSize="10sp"
                app:fontFamily="@font/mark_pro" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/samsung_galaxy_s20_ultra"
            android:textColor="@color/base_text"
            android:textSize="10sp"
            app:fontFamily="@font/mark_pro" />
    </LinearLayout>
</androidx.cardview.widget.CardView>