<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleEnabled="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_toolbar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:drawablePadding="11dp"
                    android:text="@string/zihuatanejo_gro"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    app:drawableEndCompat="@drawable/ic_arrow_down"
                    app:drawableStartCompat="@drawable/ic_location"
                    app:fontFamily="@font/mark_pro" />
            </com.google.android.material.appbar.MaterialToolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_category"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/mark_pro" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end|bottom"
                    android:text="@string/view_all"
                    android:textColor="@color/optionally"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/mark_pro" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            app:tabBackground="@drawable/selector_tab_indicator"
            app:tabIndicator="@null"
            app:tabIndicatorGravity="top"
            app:tabMaxWidth="90dp"
            app:tabMinWidth="90dp"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginEnd="11dp"
                android:layout_weight="1"
                android:background="@drawable/bg_searchview"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search"
                android:searchIcon="@drawable/ic_search"
                android:theme="@style/TextHintColor" />

            <ImageView
                android:id="@+id/imQRCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:background="@drawable/bg_circle_optionally"
                android:scaleType="center"
                android:src="@drawable/ic_qr_code" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hot_sales"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/mark_pro" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end|bottom"
                    android:text="@string/see_more"
                    android:textColor="@color/optionally"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/mark_pro" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHotSales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_hot_sales" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/best_sellers"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/mark_pro" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end|bottom"
                    android:text="@string/see_more"
                    android:textColor="@color/optionally"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/mark_pro" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBestSeller"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/item_best_seller" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:layout_margin="4dp"
        android:background="@drawable/bg_dark_blue_bottombar"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.7"
            android:drawableStart="@drawable/ic_dot"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:text="@string/explorer"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/mark_pro" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_my_cart"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_white_like" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_profile" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>